<resources>
    <string name="app_name">Popular Movies</string>
    <string name="action_settings_menu">Settings</string>
    <string name="of_ten">\/10</string>
    <string name="trailers_label">Trailers:</string>
    <string name="trailer_1">Trailer 1</string>
    <string name="trailer_2">Trailer 2</string>
    <string name="trailer_3">Trailer 3</string>

    <string name="no_trailer_exist">No trailers exist!</string>
    <string name="movie_reviews">Reviews</string>
    <string name="no_movie_reviews">No movie reviews exist!</string>
    <string name="favorite_off_content_description">Click to save this movie as your favorite.</string>

    <string name="pref_popularity_select_option_label">Display Option</string>
    <string name="pref_option_summary">Click this section to list movies by popularity
    or top-rated. </string>
    <string name="init_label">Select a movie from the list.</string>
    <!-- Label for movie popularity preference -->
    <string name="pref_popular_label">Popular</string>
    <!-- Label for top rated preference -->
    <string name="pref_top_rated_label">Top Rated</string>
    <!-- Label for favorites preference -->
    <string name="pref_favorite_label">Favorites</string>


    <string name="pref_popular_key" translatable="false">popular_key</string>

    <string name="pref_popular_value" translatable="false">popular</string>
    <string name="pref_top_rated_value" translatable="false">top_rated</string>
    <string name="pref_favorite_value" translatable="false">favorite</string>
</resources>
