<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:orientation="vertical"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".DetailActivity">

        <TextView
            android:id="@+id/title_detail"
            android:background="#5b80d8"
            style="@style/Base.TextAppearance.AppCompat.Headline"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:padding="17dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <FrameLayout
            android:layout_marginTop="17dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/poster_image_detail"
                    android:layout_width="207dp"
                    android:layout_height="237dp" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/release_date_detail"
                        style="@style/Base.TextAppearance.AppCompat.Headline"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/vote_average_detail"
                        style="@style/Base.TextAppearance.AppCompat.Headline"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <!-- Favorite Button -->
                    <FrameLayout
                        android:layout_margin="17dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/favorite_icon"
                            android:contentDescription="@string/favorite_off_content_description"
                            android:src="@android:drawable/btn_star_big_off"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </FrameLayout>
                </LinearLayout>
            </LinearLayout>
        </FrameLayout>

        <TextView
            android:id="@+id/synopsis_detail"
            android:padding="17dp"
            android:textSize="17sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:background="@android:color/darker_gray"
            android:layout_marginTop="11dp"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp"
            android:layout_width="match_parent"
            android:layout_height="2dp" />

        <TextView
            android:text="@string/trailers_label"
            style="@style/Base.TextAppearance.AppCompat.Headline"
            android:layout_marginLeft="7dp"
            android:layout_marginTop="7dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/arrow1"
                android:visibility="gone"
                android:src="@android:drawable/ic_media_play"
                android:layout_marginLeft="27dp"
                android:layout_marginTop="11dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/trailer1"
                android:visibility="gone"
                android:text="@string/trailer_1"
                android:layout_marginLeft="77dp"
                android:layout_marginTop="14dp"
                android:textSize="17sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/arrow2"
                android:src="@android:drawable/ic_media_play"
                android:visibility="gone"
                android:layout_marginLeft="27dp"
                android:layout_marginTop="11dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/trailer2"
                android:visibility="gone"
                android:text="@string/trailer_2"
                android:layout_marginLeft="77dp"
                android:layout_marginTop="14dp"
                android:textSize="17sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/arrow3"
                android:src="@android:drawable/ic_media_play"
                android:visibility="gone"
                android:layout_marginLeft="27dp"
                android:layout_marginTop="11dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/trailer3"
                android:visibility="gone"
                android:text="@string/trailer_3"
                android:layout_marginLeft="77dp"
                android:layout_marginTop="14dp"
                android:textSize="17sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </FrameLayout>

        <View
            android:background="@android:color/darker_gray"
            android:layout_marginTop="17dp"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp"
            android:layout_width="match_parent"
            android:layout_height="2dp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/movie_review_icon"
                android:src="@android:drawable/checkbox_on_background"
                android:layout_marginLeft="7dp"
                android:layout_marginTop="11dp"
                android:layout_width="27dp"
                android:layout_height="27dp" />

            <TextView
                android:id="@+id/movie_review"
                android:text="@string/movie_reviews"
                android:layout_marginLeft="47dp"
                android:layout_marginTop="11dp"
                android:layout_marginBottom="17dp"
                style="@style/Base.TextAppearance.AppCompat.Title"
                android:textColor="#777"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </FrameLayout>
    </LinearLayout>
</ScrollView>